[package]
name = "libnss-host4"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "A convenient way to implement the glibc gethostbyname4_r NSS host API"
readme = "./README.md"
repository = "https://github.com/cfzimmerman/libnss-host4"
homepage = "https://github.com/cfzimmerman/libnss-host4"
keywords = ["nss", "glibc", "dns", "hostname", "getaddrinfo"]
categories = ["network-programming", "external-ffi-bindings", "os::unix-apis"]

[dependencies]
libc = "0.2.186"
paste = "1.0.15"

[[example]]
name = "nss_example"
crate-type = ["cdylib"]
path = "examples/nss_example.rs"
